Fix curved banner on Firefox

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -154,7 +154,7 @@ p {
         content: '';
         height: 5rem;
         left: 0;
-        margin-bottom: -0.5rem;
+        margin-bottom: -0.6rem;
         position: absolute;
         right: 0;
     }
